--- a/ssportal/src/styles/main.css
+++ b/ssportal/src/styles/main.css
@@ -45,6 +45,32 @@ header .nav-btn{
     opacity: 0;
 }
 
+.buttn-signup {
+    background-color: #000000;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 16px;
+  }
+
+  .buttn-login {
+    background-color: #ddd;
+    border: none;
+    color: black;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 16px;
+  }
+
 @media only screen and (max-width: 1024px){
     header .nav-btn {
         visibility: visible;
