--- a/ssportal/src/styles/main.css
+++ b/ssportal/src/styles/main.css
@@ -122,7 +122,7 @@ header .nav-btn{
 
 main {
     height:200vh;
-    width:100%;
+    width:200vh;
     text-align: center;
     border: 5rem;
     font-family: 'Cuprum', sans-serif;
