--- a/ssportal/src/styles/quiz.css
+++ b/ssportal/src/styles/quiz.css
@@ -7,15 +7,15 @@ body {
   display: flex;
   justify-content: center;
   margin: 0;
-  padding: 0 30px;
 }
 
 .quiz-container {
-  max-width: 850px;
-  min-width: 250px;
+  width: 100vh;
+  height:80vh;
   background: #ffffff;
   border-radius: 4px;
-  margin-top: 100px;
+  margin-top: 50px;
+  margin-left:30px;
   padding: 30px 60px;
 }
 
@@ -70,7 +70,7 @@ body {
   outline: none;
   border: none;
   cursor: pointer;
-  margin-top: 15px;
+  margin-top: 35px;
 }
 
 .quiz-container button:disabled {
